--- a/sass/style.css
+++ b/sass/style.css
@@ -345,6 +345,17 @@ body {
   top: 0;
   right: 20%;
 }
+.statistics::before {
+  content: "";
+  background-image: url(../media/image/icon/top_left_circle.svg);
+  background-size: 80px 40px;
+  display: inline-block;
+  width: 80px;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 .statistics .card_statistics {
   width: 25%;
   text-align: center;
