--- a/sass/style.css
+++ b/sass/style.css
@@ -46,7 +46,7 @@ body {
 }
 .navbar .navbar-collapse .navbar-nav .nav-item .nav-link {
   font-family: "regular";
-  color: #6C6D88;
+  color: #6c6d88;
 }
 .navbar .navbar-collapse .navbar-nav .nav-item .nav-link.active {
   font-family: "Medium";
@@ -56,7 +56,7 @@ body {
   font-family: "regular";
   font-size: 0.8rem;
   padding: 0.75rem;
-  border: 0.75px solid #D4E1F4;
+  border: 0.75px solid #d4e1f4;
 }
 .navbar .navbar-collapse .dropdown .dropdown-toggle img {
   width: 20px;
@@ -69,7 +69,7 @@ body {
 }
 .navbar .navbar-collapse .dropdown .dropdown-toggle:hover {
   border-color: transparent;
-  border: 0.75px solid #D4E1F4;
+  border: 0.75px solid #d4e1f4;
 }
 .navbar .navbar-collapse .dropdown .dropdown-menu .dropdown-item {
   font-family: "regular";
@@ -86,7 +86,7 @@ body {
 /* ======= navbar ======= */
 /* ======= header ======= */
 .header {
-  height: 650px;
+  height: 90vh;
   position: relative;
 }
 .header .swiper {
@@ -179,7 +179,7 @@ body {
 }
 .header .text-header {
   position: absolute;
-  top: 15%;
+  top: 30%;
   z-index: 99;
   text-align: center;
   color: #fff;
@@ -279,7 +279,7 @@ body {
 }
 .about .title_section {
   font-family: "Medium";
-  color: #1A140E;
+  color: #1a140e;
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -291,6 +291,7 @@ body {
   padding: 2.5rem 1.5rem;
   -webkit-margin-end: 3%;
           margin-inline-end: 3%;
+  transition: background-color 1s ease-out 100ms;
 }
 .about .card_about svg {
   width: 25px;
@@ -303,11 +304,53 @@ body {
 .about .card_about:nth-child(3) svg {
   background-color: #058a94;
 }
+.about .card_about:nth-child(3):hover {
+  background-color: #058a94;
+  transition: background-color 1s ease-out 100ms;
+}
+.about .card_about:nth-child(3):hover svg {
+  background-color: #fff;
+  color: #058a94;
+}
+.about .card_about:nth-child(3):hover h4 {
+  color: #fff;
+}
+.about .card_about:nth-child(3):hover p {
+  color: #fff;
+}
 .about .card_about:nth-child(4) svg {
-  background-color: #BD5B92;
+  background-color: #bd5b92;
+}
+.about .card_about:nth-child(4):hover {
+  background-color: #bd5b92;
+  transition: background-color 1s ease-out 100ms;
+}
+.about .card_about:nth-child(4):hover svg {
+  background-color: #fff;
+  color: #bd5b92;
+}
+.about .card_about:nth-child(4):hover h4 {
+  color: #fff;
+}
+.about .card_about:nth-child(4):hover p {
+  color: #fff;
 }
 .about .card_about:nth-child(5) svg {
-  background-color: #4A4676;
+  background-color: #4a4676;
+}
+.about .card_about:nth-child(5):hover {
+  background-color: #4a4676;
+  transition: background-color 1s ease-out 100ms;
+}
+.about .card_about:nth-child(5):hover svg {
+  background-color: #fff;
+  color: #4a4676;
+}
+.about .card_about:nth-child(5):hover h4 {
+  color: #fff;
+}
+.about .card_about:nth-child(5):hover p {
+  color: #fff;
 }
 .about .card_about:last-child {
   -webkit-margin-end: 0;
@@ -315,7 +358,7 @@ body {
 }
 .about .card_about h4 {
   font-family: "semibold";
-  color: #1A140E;
+  color: #1a140e;
   margin: 1rem 0;
 }
 .about .card_about p {
@@ -329,10 +372,11 @@ body {
 .statistics {
   margin-top: 2rem;
   display: flex;
-  background-color: #7973C5;
+  background-color: #7973c5;
   padding: 4rem 0;
   border-radius: 25px;
   position: relative;
+  overflow: hidden;
 }
 .statistics::after {
   content: "";
@@ -348,10 +392,10 @@ body {
 .statistics::before {
   content: "";
   background-image: url(../media/image/icon/top_left_circle.svg);
-  background-size: 80px 40px;
   display: inline-block;
-  width: 80px;
-  height: 40px;
+  width: 70px;
+  height: 60px;
+  border-radius: 0 50% 200px 0;
   position: absolute;
   top: 0;
   left: 0;
@@ -382,6 +426,17 @@ body {
 }
 .statistics .card_statistics:nth-child(3)::before {
   content: "";
+  background-image: url(../media/image/icon/circle.svg);
+  background-size: 65px 65px;
+  display: inline-block;
+  width: 65px;
+  height: 65px;
+  position: absolute;
+  top: -5%;
+  left: 30%;
+}
+.statistics .card_statistics:nth-child(4)::before {
+  content: "";
   background-image: url(../media/image/icon/stars.svg);
   background-size: 80px 40px;
   display: inline-block;
@@ -391,7 +446,7 @@ body {
   top: 45%;
   left: 23%;
 }
-.statistics .card_statistics:nth-child(3)::after {
+.statistics .card_statistics:nth-child(4)::after {
   content: "";
   background-image: url(../media/image/icon/have_bottom_circle.svg);
   background-size: 150px 80px;
@@ -403,4 +458,524 @@ body {
   left: 20%;
 }
 
-/* ======= statistics ======= *//*# sourceMappingURL=style.css.map */
+/* ======= statistics ======= */
+/* ======= company ======= */
+.company {
+  margin-top: 3rem;
+}
+.company .text-header {
+  font-family: "semibold";
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  color: #058a94;
+  font-size: 1.4rem;
+}
+.company .text-header::before {
+  content: "";
+  width: 5%;
+  margin-left: 1rem;
+  height: 3px;
+  background-color: #058a94;
+}
+.company .title_section {
+  font-family: "Medium";
+  color: #1a140e;
+  text-align: start;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+.company .accordion .accordion-item {
+  margin-bottom: 2rem;
+  border-top: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+}
+.company .accordion .accordion-item .accordion-header .accordion-button {
+  color: #3b3a3a;
+  font-family: "Medium";
+}
+.company .accordion .accordion-item .accordion-header .accordion-button .number {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  -webkit-margin-end: 1rem;
+          margin-inline-end: 1rem;
+}
+.company .accordion .accordion-item .accordion-header .accordion-button::after {
+  margin-right: auto;
+  margin-left: unset;
+  filter: invert(34%) sepia(45%) saturate(6599%) hue-rotate(165deg) brightness(95%) contrast(96%);
+}
+.company .accordion .accordion-item .accordion-header .accordion-button:not(.collapsed) {
+  background-color: transparent;
+  box-shadow: unset;
+}
+.company .accordion .accordion-item .accordion-header .accordion-button:not(.collapsed)::after {
+  background-image: var(--bs-accordion-btn-icon) !important;
+}
+.company .accordion .accordion-item .accordion-header .accordion-button:focus {
+  box-shadow: none;
+}
+.company .accordion .accordion-item .accordion-collapse .accordion-body {
+  font-family: "regular";
+  color: #8f8f8f;
+  font-size: 0.9rem;
+  width: 90%;
+  -webkit-margin-start: auto;
+          margin-inline-start: auto;
+}
+.company .accordion .accordion-item:nth-child(1) .accordion-header .accordion-button .number {
+  color: #058a94;
+  background-color: rgba(5, 138, 148, 0.12);
+  border-radius: 12px;
+}
+.company .accordion .accordion-item:nth-child(2) .accordion-header .accordion-button .number {
+  color: #bd5b92;
+  background-color: rgba(189, 91, 146, 0.12);
+  border-radius: 12px;
+}
+.company .accordion .accordion-item:nth-child(3) .accordion-header .accordion-button .number {
+  color: #4a4676;
+  background-color: rgba(74, 70, 118, 0.12);
+  border-radius: 12px;
+}
+.company .accordion .order_btn {
+  font-family: "Medium";
+  color: #fff;
+  background-color: #058a94;
+  font-size: 0.8rem;
+  padding: 0.75rem 3rem;
+  transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out;
+}
+.company .accordion .order_btn:hover {
+  background-color: #fff;
+  color: #058a94;
+  border: 1px solid #058a94;
+  transition: 0.7s ease-in-out;
+}
+.company .image_company {
+  position: relative;
+}
+.company .image_company img {
+  height: 500px;
+  width: 80%;
+  display: block;
+  -webkit-margin-start: auto;
+          margin-inline-start: auto;
+}
+.company .image_company::after {
+  content: "";
+  background-image: url("../media/image/icon/arrow.svg");
+  background-size: 100px 80px;
+  display: inline-block;
+  width: 100px;
+  height: 80px;
+  position: absolute;
+  top: -4.5rem;
+  right: 7rem;
+  z-index: -1;
+}
+.company .image_company::before {
+  content: "";
+  background-image: url("../media/image/icon/dots.svg");
+  background-size: 120px 150px;
+  display: inline-block;
+  width: 120px;
+  height: 150px;
+  position: absolute;
+  bottom: -3.5rem;
+  left: -4rem;
+  z-index: -1;
+}
+
+/* ======= company ======= */
+/* ======= best platform ======= */
+.best_platform {
+  background-image: url("../media/image/best.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 5rem 0;
+  margin-top: 3rem;
+  position: relative;
+}
+.best_platform::after {
+  content: "";
+  background-image: url("../media/image/icon/best_icon_bottom.svg");
+  background-size: 35px 35px;
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  top: 15rem;
+  left: 20rem;
+  z-index: -1;
+}
+.best_platform .title_section {
+  font-family: "bold";
+  color: #3b3a3a;
+  text-align: center;
+  width: 30%;
+  margin: 0 auto;
+  position: relative;
+}
+.best_platform .title_section::after {
+  content: "";
+  background-image: url("../media/image/icon/best_icon.svg");
+  background-size: 25px 25px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -1rem;
+  right: -1rem;
+  z-index: -1;
+}
+.best_platform p {
+  font-family: "regular";
+  color: #a7a5a5;
+  text-align: center;
+  margin-top: 2rem;
+  width: 30%;
+  margin: 1.5rem auto 3rem;
+  font-size: 0.7rem;
+}
+.best_platform img {
+  width: 50%;
+  height: 50vh;
+  margin: 0 auto;
+  display: block;
+}
+
+/* ======= best platform ======= */
+/* ======= partners ======= */
+.partners {
+  margin: 8rem 0;
+}
+.partners .swiper {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+.partners .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.partners .swiper .swiper-slide img {
+  display: block;
+  width: 150px;
+  height: 35px;
+  margin: 0 auto;
+  filter: grayscale(1);
+  transition: 0.7s ease-in-out;
+}
+.partners .swiper .swiper-slide img:hover {
+  filter: grayscale(0);
+  transition: 0.7s ease-in-out;
+}
+
+/* ======= partners ======= */
+/* ======= employment ======= */
+.employment .card_step {
+  box-shadow: 0 0 31px rgba(0, 0, 0, 0.05);
+  width: 42%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  text-align: center;
+  display: inline-block;
+  padding: 3rem 2rem;
+  margin-bottom: 0;
+  -webkit-margin-end: 8%;
+          margin-inline-end: 8%;
+  border-radius: 14px;
+  position: relative;
+}
+.employment .card_step img {
+  width: 60px;
+  height: 60px;
+}
+.employment .card_step h5 {
+  font-family: "Medium";
+  color: #1d1d26;
+  margin: 1rem 0;
+}
+.employment .card_step p {
+  font-family: "Medium";
+  color: #707070;
+  font-size: 0.7rem;
+  margin-bottom: 0;
+}
+.employment .card_step:nth-child(even) {
+  -webkit-margin-end: 0;
+          margin-inline-end: 0;
+  margin-top: 2rem;
+}
+.employment .card_step:nth-child(1)::after {
+  content: "";
+  background-image: url("../media/image/icon/dots_pirple.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+}
+.employment .card_step:nth-child(1)::before {
+  content: "";
+  background-image: url("../media/image/icon/line.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 45%;
+  left: -20%;
+  z-index: -1;
+}
+.employment .card_step:nth-child(2)::after {
+  content: "";
+  background-image: url("../media/image/icon/dots_brouwn.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+}
+.employment .card_step:nth-child(2)::before {
+  content: "";
+  background-image: url("../media/image/icon/line.svg");
+  transform: rotate(90deg);
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 100%;
+  right: -18%;
+  z-index: -1;
+}
+.employment .card_step:nth-child(3)::after {
+  content: "";
+  background-image: url("../media/image/icon/dots_green.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+}
+.employment .card_step:nth-child(3)::before {
+  content: "";
+  background-image: url("../media/image/icon/line.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 45%;
+  left: -20%;
+  z-index: -1;
+}
+.employment .card_step:nth-child(4)::after {
+  content: "";
+  background-image: url("../media/image/icon/dots_dark_green.svg");
+  background-size: 50px 50px;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 5%;
+  right: 2%;
+}
+.employment .download_buttons {
+  width: 80%;
+  -webkit-margin-start: auto;
+          margin-inline-start: auto;
+}
+.employment .download_buttons .text-header {
+  font-family: "semibold";
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  color: #e4aa3c;
+  font-size: 1.4rem;
+  position: relative;
+}
+.employment .download_buttons .text-header::before {
+  content: "";
+  width: 8%;
+  margin-left: 1rem;
+  height: 3px;
+  background-color: #e4aa3c;
+}
+.employment .download_buttons .text-header::after {
+  content: "";
+  background-image: url("../media/image/icon/best_icon.svg");
+  background-size: 25px 25px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -5%;
+  right: 8rem;
+  transform: rotate(270deg);
+}
+.employment .download_buttons .title_section {
+  font-family: "bold";
+  color: #3b3a3a;
+  text-align: start;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+.employment .download_buttons .text {
+  font-family: "regular";
+  color: #8f8f8f;
+  font-size: 0.8rem;
+}
+.employment .download_buttons .apple_store, .employment .download_buttons .google_play {
+  padding: 0;
+  width: 25%;
+  -webkit-margin-end: 1rem;
+          margin-inline-end: 1rem;
+}
+.employment .download_buttons .apple_store img, .employment .download_buttons .google_play img {
+  width: 100%;
+}
+.employment .download_buttons .apple_store:hover, .employment .download_buttons .google_play:hover {
+  border-color: transparent;
+}
+
+/* ======= employment ======= */
+/* ======= download ======= */
+.download {
+  margin-top: 3rem;
+  background-color: #058a94;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  position: relative;
+}
+.download::after {
+  content: "";
+  background-image: url("../media/image/icon/download_top.svg");
+  background-size: 100px 100px;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.download h3 {
+  font-family: "bold";
+  color: #fff;
+  margin-top: 8rem;
+  margin-bottom: 2rem;
+}
+.download ul {
+  padding: 0;
+  list-style: none;
+}
+.download ul li {
+  font-family: "light";
+  font-size: 0.9rem;
+  color: #fff;
+  width: 50%;
+  margin-bottom: 0.5rem;
+}
+.download .download_buttons {
+  margin-top: 2rem;
+}
+.download .download_buttons .btn {
+  padding: 0;
+  width: 20%;
+}
+.download .download_buttons .btn:hover {
+  border-color: transparent;
+}
+.download .download_buttons .btn img {
+  width: 100%;
+  border-radius: 5px;
+}
+.download .image_download {
+  position: relative;
+  z-index: 99;
+}
+.download .image_download img {
+  width: 50%;
+  height: 108%;
+  z-index: 99;
+  display: block;
+  margin: 0 auto;
+  margin-top: -5%;
+}
+.download .image_download::after {
+  content: "";
+  background-image: url("../media/image/icon/shape_mobile.svg");
+  background-size: 50px 80px;
+  display: inline-block;
+  width: 50px;
+  height: 80px;
+  position: absolute;
+  top: 10%;
+  left: 24%;
+  z-index: -1;
+}
+
+/* ======= download ======= */
+/* ======= application ======= */
+.application {
+  margin-top: 3rem;
+  padding: 3rem 0;
+  background-color: rgba(5, 138, 148, 0.05);
+}
+.application h3 {
+  font-family: "bold";
+  color: #222222;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.application .swiper {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+.application .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.application .swiper .swiper-slide img {
+  display: block;
+  width: 80%;
+  height: 350px;
+  margin: 0 auto;
+}
+
+/* ======= application ======= */
+@media only screen and (max-width: 991.98px) {
+  /* ======= company ======= */
+  .company .image_company::after {
+    content: unset;
+  }
+  .company .image_company::before {
+    content: unset;
+  }
+  /* ======= company ======= */
+}/*# sourceMappingURL=style.css.map */
